--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -154,10 +154,14 @@ body.training {
 }
 
 .header-wrapper {
-    background-color: #d3dcde;
+    background-color: #446589;
     border-radius: 4px;
     height: 32px;
     overflow: hidden;
+}
+
+.training .header-wrapper {
+    background-color: #DC7118;
 }
   
 .header {
@@ -195,6 +199,10 @@ body.training {
     margin-right: 19px;
 }
 
+.training .header li span {
+    background: #f5c8a3;
+}
+
 .header li span:before, .header li span:after {
     content: "";
     position: absolute;
@@ -205,8 +213,17 @@ body.training {
     height: 0;
 }
 
+.training .header li span:before, .training .header li span:after {
+    border: 0 solid #f5c8a3;
+    border-width: 16px 8px;
+}
+
 .header li span:before {
     left: -16px;
+    border-left-color: transparent;
+}
+
+.training .header li span:before {
     border-left-color: transparent;
 }
 
@@ -216,10 +233,19 @@ body.training {
     border-left-color: #d3dcde;
 }
 
+.training .header li span:after {
+    border-color: transparent;
+    border-left-color: #f5c8a3;
+}
+
 .header li:first-child span {
     padding-left: 15px;
     background-color: #446589;
     color: #fff;
+}
+
+.training .header li:first-child span {
+    background-color: #DC7118;
 }
 
 .header li:first-child span:before {
@@ -230,6 +256,10 @@ body.training {
     border-left-color: #446589;
 }
 
+.training .header li:first-child span:after {
+    border-left-color: #DC7118;
+}
+
 .header li:last-child span {
     padding-right: 15px;
     background-color: #334c68;
@@ -237,11 +267,98 @@ body.training {
     margin-right: 0;
 }
 
+.training .header li:last-child span {
+    background-color: #b75e14;
+}
+
 .header li:last-child span:before {
     border-color: #334c68;
     border-left-color: transparent;
 }
 
+.training .header li:last-child span:before {
+    border-color: #b75e14;
+    border-left-color: transparent;
+}
+
 .header li:last-child span:after {
     border: none;
+}
+
+.autocomplete {
+    position: relative;
+}
+
+.autocomplete-items {
+    position: absolute;
+    z-index: 99;
+    top: 100%;
+    left: 0;
+    right: 0;
+    padding-left: 0;
+    margin-bottom: 0;
+}
+
+.autocomplete-items li {
+    border: 1px solid #597ea2;
+    display: block;
+    padding: 10px;
+    cursor: pointer;
+    background-color: #fff;
+    color: #2C3E50;
+    margin-bottom: -1px;
+}
+
+.autocomplete-items li:first-child {
+    border-top: none;
+}
+
+.autocomplete-items li:last-child {
+    margin-bottom: 0;
+    border-bottom-right-radius: .25rem;
+    border-bottom-left-radius: .25rem;
+}
+
+.autocomplete-items li:hover {
+    background-color: #c7d4e0; 
+}
+
+.autocomplete-items li.autocomplete-active {
+    background-color: #2C3E50; 
+    border-color: #2C3E50;
+    color: #ffffff; 
+}
+
+.autocomplete.open input {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.autocomplete.open input:focus {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+.command input:focus {
+    border-color: #59a25c;
+}
+
+.command .autocomplete-items li {
+    border-color: #59a25c;
+    color: #2c502d;
+}
+
+.command .autocomplete-items li:hover {
+    background-color: #c7e0c8;
+}
+
+.command .autocomplete-items li.autocomplete-active {
+    background-color: #2c502d; 
+    border-color: #2c502d;
+    color: #ffffff; 
+}
+
+.small-footer {
+    position: absolute;
+    font-size: 0.75rem;
 }
